--- a/plots.ipynb
+++ b/plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,10 @@
     "plt.pie(active_defunct_counts.values, labels=active_defunct_counts.index, autopct='%1.1f%%', startangle=90, colors=sns.color_palette('viridis', len(active_defunct_counts)))\n",
     "plt.title('Distribution of Companies by Active/Defunct')\n",
     "plt.axis('equal')  # Equal aspect ratio ensures that pie is drawn as a circle\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
